--- a/security_chatbot/requirements.txt
+++ b/security_chatbot/requirements.txt
@@ -1,7 +1,6 @@
-
-python-dotenv==1.0.0
 google-adk>=0.1.0
 google-genai>=0.2.0
 python-dotenv>=1.0.0
 flask>=3.0.0
 flask-cors>=4.0.0
+requests>=2.31.0
